--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -13,6 +13,16 @@ nav {
   left:0%; /* 左边界距离视窗左边的百分比，结合margin-left使用来进行居中或其它定位效果 */
   margin-left:115px; /* 左边的外边距，用于调整定位的具体位置（结合left:50%使用可以达到居中的效果，取决于具体的数值） */
 }
+nav {
+  ul {
+    li {
+      a {
+        color: #000; // 字体颜色改为黑色
+        font-weight: bold; // 字体加粗
+      }
+    }
+  }
+}
 footer { 
   width:230px;  
   left:0%;
