--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -29,10 +29,10 @@ footer {
   margin-left:115px; /* 正值朝右 */
 }
 #banner {
-  background: url(../images/body-background.png) #d3d3d3;
+  background: url(../images/body-background.png) #e0e0e0;
 }
 table {
-  width:62%;
+  width:75%;
   margin-left: auto;
   margin-right: auto;
 }
