--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -29,7 +29,7 @@ footer {
   margin-left:115px; /* 正值朝右 */
 }
 #banner {
-  background: url(../images/body-background.png) #e0e0e0;
+  background: #e0e0e0;
 }
 table {
   width:75%;
