--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -31,6 +31,11 @@ footer {
 #banner {
   background: #e0e0e0;
 }
+#banner {
+  display: flex; /* 使用Flex布局 */
+  align-items: center; /* 垂直居中 */
+  justify-content: space-between; /* 元素之间平均分配空间 */
+}
 table {
   width:75%;
   margin-left: auto;
