--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -32,9 +32,10 @@ footer {
   background: #e0e0e0;
 }
 #banner {
-  display: flex; /* 使用Flex布局 */
-  align-items: center; /* 垂直居中 */
-  justify-content: space-between; /* 元素之间平均分配空间 */
+  display: flex;
+  justify-content: flex-start; /* 沿主轴（水平方向）对齐方式 */
+  align-items: center; /* 在交叉轴（垂直方向）上如何对齐 */
+  gap: 10px; /* 控制项目之间的间隙 */
 }
 table {
   width:75%;
