--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -28,6 +28,11 @@ footer {
   left:0%;
   margin-left:115px; /* 正值朝右 */
 }
+.fork {
+  position: static; // 默认定位方式
+  left: auto; // 清除left值
+  margin-left: auto; // 清除特定的margin-left值
+}
 #banner {
   display: flex;
   align-items: center; /* 如有需要，调整垂直对齐 */
@@ -38,4 +43,7 @@ table {
   width:75%;
   margin-left: auto;
   margin-right: auto;
+}
+#banner {
+  background: #e0e0e0;
 }
