--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
       <div id="banner">
         <span id="logo"></span>
 
-        <a href="{{ site.github.repository_url }}" class="button fork"><strong>View On GitHub</strong></a>
+<!--         <a href="{{ site.github.repository_url }}" class="button fork"><strong>View On GitHub</strong></a>
         {% if site.show_downloads %}
           <div class="downloads">
             <span>Downloads:</span>
@@ -34,10 +34,11 @@
               <li><a href="{{ site.github.tar_url }}" class="button">TAR</a></li>
             </ul>
           </div>
-        {% endif %}
-
-        <a href="{{ site.github.repository_url }}" class="button fork"><strong>Forbidden Questions</strong></a>
-        <a href="https://arxiv.org/abs/2402.05668" class="button fork"><strong>Paper</strong></a>
+        {% endif %} -->
+        
+        <a href="{{ site.github.repository_url }}" class="button fork1"><strong>View On GitHub</strong></a>
+        <a href="{{ site.github.repository_url }}" class="button fork2"><strong>Forbidden Questions</strong></a>
+        <a href="https://arxiv.org/abs/2402.05668" class="button fork3"><strong>Paper</strong></a>
       </div><!-- end banner -->
 
     <div class="wrapper">
