--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
         
         <a href="{{ site.github.repository_url }}" class="button fork1"><strong>View On GitHub</strong></a>
         <a href="{{ site.github.repository_url }}" class="button fork2"><strong>Forbidden Questions</strong></a>
-        <a href="https://arxiv.org/abs/2402.05668" class="button fork3"><strong>Paper</strong></a>
+        <a href="https://arxiv.org/abs/2402.05668" class="button fork3"><strong>Paper Link</strong></a>
       </div><!-- end banner -->
 
     <div class="wrapper">
