--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -38,7 +38,7 @@ footer {
     margin-top: 6px;
     line-height: 14px;
     font-size: 14px;
-    background-color: #FFE788;
+    background-color: #FFEBA0;
   }  
   .fork2 {
     left: 50%;  /* 覆盖.fork2的左边距 */
