--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -67,6 +67,6 @@ table {
 #banner {
   background: #e0e0e0;
 }
-header h1 {
-  font-weight: bold; 
-}
+// header h1 {
+//   font-weight: bold; 
+// }
