--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -78,6 +78,9 @@ table {
     display: none;
   }
 }
+header {
+  background: url(../images/background.png) #3769a4; /* same as trustairlab */
+}
 // header h1 {
 //   font-weight: bold; 
 // }
