--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -18,7 +18,7 @@ nav {
   ul {
     li {
       a {
-        color: #000; // 字体颜色改为黑色
+        // color: #000; // 字体颜色改为黑色
         font-weight: bold; // 字体加粗
       }
     }
