--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -79,7 +79,8 @@ table {
   }
 }
 header {
-  background: url(../images/background.png) #3769a4; /* same as trustairlab */
+  background: url(../images/background.png);
+  // background: url(../images/background.png) #3769a4; /* same as trustairlab */
 }
 // header h1 {
 //   font-weight: bold; 
