--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -79,9 +79,12 @@ table {
   }
 }
 header {
-  background: url(../images/background.png);
-  // background: url(../images/background.png) #3769a4; /* same as trustairlab */
+  background-image: linear-gradient(to bottom, #3769a4 0%, lightblue 100%);
 }
+// header {
+//   background: url(../images/background.png);
+//   background: url(../images/background.png) #3769a4; /* same as trustairlab */
+// }
 // header h1 {
 //   font-weight: bold; 
 // }
