--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,10 +41,13 @@
             </ul>
           </div>
         {% endif %} -->
+        <a href="{{site.github.url}}" class="button"><strong>Home</strong></a>
+        <a href="https://github.com/Junjie-Chu/Best_Jailbreak_Way_Public/tree/main/datasets" class="button"><strong>Forbidden Questions</strong></a>
+        <a href="https://arxiv.org/abs/2402.05668" class="button"><strong>Our Paper Link</strong></a>
         
-        <a href="{{ site.github.repository_url }}" class="button fork1"><strong>View On GitHub</strong></a>
+<!--         <a href="{{ site.github.repository_url }}" class="button fork1"><strong>View On GitHub</strong></a>
         <a href="https://github.com/Junjie-Chu/Best_Jailbreak_Way_Public/tree/main/datasets" class="button fork2"><strong>Forbidden Questions</strong></a>
-        <a href="https://arxiv.org/abs/2402.05668" class="button fork3"><strong>Our Paper Link</strong></a>
+        <a href="https://arxiv.org/abs/2402.05668" class="button fork3"><strong>Our Paper Link</strong></a> -->
       </div><!-- end banner -->
 
     <div class="wrapper">
