--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
             </ul>
           </div>
         {% endif %} -->
-        <a href="{{site.github.url}}" class="button"><strong>Home</strong></a>
+        <a href="{{site.github.url}}/leaderboard/" class="button"><strong>Leaderboard</strong></a>
         <a href="https://github.com/Junjie-Chu/Best_Jailbreak_Way_Public/tree/main/datasets" class="button"><strong>Forbidden Questions</strong></a>
         <a href="https://arxiv.org/abs/2402.05668" class="button"><strong>Our Paper Link</strong></a>
         
