--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,8 +44,11 @@
         <a href="{{site.github.url}}/leaderboard/" class="button"><strong>Leaderboard</strong></a>
         <a href="https://github.com/Junjie-Chu/Best_Jailbreak_Way_Public/tree/main/datasets" class="button"><strong>Forbidden Questions</strong></a>
         <a href="https://arxiv.org/abs/2402.05668" class="button"><strong>Our Paper Link</strong></a>
-        <a href="{{ site.github.repository_url }}" class="button fork2"><strong>View on GitHub</strong></a>
-        <a href="https://github.com/TrustAIRLab" class="button fork3"><strong>View Our Lab</strong></a>
+        <div>
+            <span>Useful Links:</span>
+            <a href="{{ site.github.repository_url }}" class="button fork2"><strong>View on GitHub</strong></a>
+            <a href="https://github.com/TrustAIRLab" class="button fork3"><strong>View Our Lab</strong></a>
+        </div>
         
 <!--         <a href="{{ site.github.repository_url }}" class="button fork1"><strong>View On GitHub</strong></a>
         <a href="https://github.com/Junjie-Chu/Best_Jailbreak_Way_Public/tree/main/datasets" class="button fork2"><strong>Forbidden Questions</strong></a>
