--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -42,13 +42,13 @@ nav, footer {
     margin-top: 6px;
     line-height: 14px;
     font-size: 14px;
-    background-color: #FFEBA0;
+    // background-color: #FFEBA0;
   }  
   .fork2 {
-    left: 75%;  /* 覆盖.fork2的左边距 */
+    left: 90%;  /* 覆盖.fork2的左边距 */
   }
   .fork3 {
-    left: 90%;  /* 覆盖.fork3的左边距 */
+    left: 100%;  /* 覆盖.fork3的左边距 */
   }
   #logo {
     position: absolute;
