--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
         <a href="{{site.github.url}}/leaderboard/" class="button"><strong>Leaderboard</strong></a>
         <a href="https://github.com/Junjie-Chu/Best_Jailbreak_Way_Public/tree/main/datasets" class="button"><strong>Forbidden Questions</strong></a>
         <a href="https://arxiv.org/abs/2402.05668" class="button"><strong>Our Paper Link</strong></a>
-        <div>
+        <div class="links">
             <span>Useful Links:</span>
             <a href="{{ site.github.repository_url }}" class="button fork2"><strong>View on GitHub</strong></a>
             <a href="https://github.com/TrustAIRLab" class="button fork3"><strong>View Our Lab</strong></a>
