--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -44,7 +44,8 @@
         <a href="{{site.github.url}}" class="button"><strong>Home</strong></a>
         <a href="https://github.com/Junjie-Chu/Best_Jailbreak_Way_Public/tree/main/datasets" class="button"><strong>Forbidden Questions</strong></a>
         <a href="https://arxiv.org/abs/2402.05668" class="button"><strong>Our Paper Link</strong></a>
-        <a href="{{ site.github.repository_url }}" class="button fork2"><strong>View on GitHub</strong></a>
+        <a href="{{ site.github.repository_url }}" class="button"><strong>View on GitHub</strong></a></li>
+
         <a href="https://github.com/TrustAIRLab" class="button fork3"><strong>View Our Lab</strong></a>
         
 <!--         <a href="{{ site.github.repository_url }}" class="button fork1"><strong>View On GitHub</strong></a>
