--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -47,8 +47,9 @@ nav, footer {
   .fork2 {
     left: 80%;  /* 覆盖.fork2的左边距 */
   }
-  .fork3 {
+  .button.fork3 {
     left: 97%;  /* 覆盖.fork3的左边距 */
+    background-color: #a0c6ff;
   }
   #logo {
     position: absolute;
