--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -48,8 +48,8 @@ nav, footer {
     left: 80%;  /* 覆盖.fork2的左边距 */
   }
   .button.fork3 {
-    left: 97%;  /* 覆盖.fork3的左边距 */
-    background-color: #a0c6ff;
+    left: 98%;  /* 覆盖.fork3的左边距 */
+    background-color: #a0c6ff!important;
   }
   #logo {
     position: absolute;
