--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -42,14 +42,14 @@ nav, footer {
     margin-top: 6px;
     line-height: 14px;
     font-size: 14px;
-    background-color: #a0c6ff;
+    // background-color: #a0c6ff;
   }  
   .fork2 {
     left: 80%;  /* 覆盖.fork2的左边距 */
   }
   .button.fork3 {
     left: 98%;  /* 覆盖.fork3的左边距 */
-    background-color: #a0c6ff!important;
+    // background-color: #a0c6ff!important;
   }
   #logo {
     position: absolute;
