--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
         <a href="https://arxiv.org/abs/2402.05668" class="button"><strong>Our Paper Link</strong></a>
         <a href="{{ site.github.repository_url }}" class="button"><strong>View on GitHub</strong></a></li>
 
-        <a href="https://github.com/TrustAIRLab" class="button fork3"><strong>View Our Lab</strong></a>
+        <a href="https://github.com/TrustAIRLab" class="button fork3"><strong><em>View Our Lab</em></strong></a>
 
         
 <!--         <a href="{{ site.github.repository_url }}" class="button fork1"><strong>View On GitHub</strong></a>
